# badge

./: .dockerignore  .env.example  .gitignore  README.md  WW_verify_YJ8c0vAuTjyAD27Z.txt  api1.xlsx  api2.xls  batch_rerun_new_analysis_summary.json  docker-compose.gpu.yml  docker-compose.server.yml  docker-compose.yml  label.xlsx  package.json  pnpm-lock.yaml  rerun_0419_0420_summary.json  rerun_0419_plus_summary.json  restart_badge.sh  start-dev.cmd  start-dev.ps1  wecom_smart_badge_dev_handoff.docx  wecom_smart_badge_task_breakdown.docx  妯℃澘鏉窞绫冲叞缇庡洟AI杞欢閮ㄧ讲.docx  智慧工牌功能设计.xlsx  消息推送平台操作说明.docx  璁捐.xlsx  适应症.xlsx  鍒拌瘖淇℃伅鎺ュ彛.xlsx  鎺ュ彛鏂囨。.xlsx  鏍囩.xlsx  闀挎矙闆呯編鏈楀Э鏅鸿兘宸ョ墝绯荤粺閮ㄧ讲.docx
apps/api/: .dockerignore  .env.example  Dockerfile  _write_new_prompt.py  alembic.ini  compare_v7.py  export_asr_v7.py  export_transcripts.py  fix_process_eval_conflicts.py  pyproject.toml  relabel_v7.py  rerun_archive_analysis.py  rerun_selective.py  tmp_batch_rerun_new_analysis.py  tmp_rerun_0419_0420.py  tmp_rerun_post_asr_dates.py
apps/api/migrations/: env.py
apps/api/scripts/: analyze_staff_voiceprints.py  asr_hotwords_default.txt  backfill_staff_voiceprint_reviews.py  backfill_staff_voiceprints.py  benchmark_asr_models.py  cleanup_invalid_profile_placeholder_tags.py  compare_recording_with_xfyun.py  download_dingtalk_audio_archive.py  ensure_organization_tables.py  fix_global_admin_scope.py  install_sensevoice_3dspeaker_runtime.sh  mine_asr_error_candidates.py  process_dingtalk_archive_backlog.py  rebind_legacy_recordings_to_archive.py  rebuild_xfyun_compare_page.py  (+4 more)
(+507 files in other folders)
