[project]
name = "smart-badge-api"
version = "0.1.0"
description = "FastAPI service for the smart badge system"
authors = [
    { name = "Tero", email = "tangtao@stacs.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dramatiq[redis]>=1.18.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.12",
    "psycopg-pool>=3.2.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "aiosqlite>=0.22.1",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0",
    "openpyxl>=3.1.5",
    "aiofiles>=25.1.0",
    "faster-whisper>=1.1.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
smart-badge-api = "smart_badge_api.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
